--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "vue": "^3.2.47",
     "vue-cookies": "^1.8.3",
-    "vue-router": "^4.1.6"
+    "vue-cookies-reactive": "^2.1.1",
+    "vue-router": "^4.1.6",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
-    "@types/node": "^18.14.2",
+    "@types/node": "^18.16.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
